0.22
    +) Added the option 'target_chi' - target markers can be kept in other CHI
       cache than data of targets. It's useful for l1_cache's caches of CHI

0.21
    *) A detection of circle dependencies is improved (not tested)

0.20
    +) Some optimization
    *) Few fixes of documentation
    +) Added option 'depends_catch' to rule as catcher callback for dependencies

0.19
    *) Fixed bug of die like "Can't call method "is_value" on an undefined value
       at /usr/local/share/perl5/CHI/Cascade.pm line 190"

0.18
    +) Now if recompute function dies with exception of CHI::Cascade::Value type
       (introduced in v.0.13) CHI::Cascade::run method will return old value of
       target value from cache if exception's value is 'undef' and cache value
       exists. Before the run method always returned a value of exception.
    +) Imroved the documentation for CHI::Cascade::rule/code
    +) Added the documentation of CHI::Cascade::Value

0.17 (stable)
    1) Added a callback function in rule as 'recomputed'

0.16
    1) Changed API for coderef's subroutines in 'depends' of rules. Now first
       parameter is reference to CHI::Cascade::Rule object and other are
       'qr_params'
    2) CHI::Cascade::Rule object now has a method 'cascade' which returns a
       CHI::Cascade instance for this rule. You can use it in 'depends'
       subroutines

0.15
    1) Corrections if cascade rules have a 'depends' option as coderef. Backward
       compatible. Now coderef can return arrayref of dependencies. Before it
       could return only one dependence as plain text. No tests yet for this
    2) Tests are rewritten and optimised
    3) Added a FastMmap driver's tests
    4) Added tests when dependencies are coderef (t/lib/test_02.pm)

0.14 (stable)
    1) Improved tests in accordance with reports version 0.13
    2) Fixed few misprints in Changes & TODO files

0.13 (stable)
    1) Fix bug - sometimes generated warnging for trigger time (was undefined)