@@ -28,4 +28,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/Perlover/CHI-Cascade.git
-version: 0.22
+version: 0.221
