@@ -1,3 +1,7 @@
+new_ver (now is 0.221)
+    +) Queues for non blocking running - to see test t/lib/test_04.pm
+    +) Added test '07_fast_mmap.t' for queue-ing
+
 0.22
     +) Added the option 'target_chi' - target markers can be kept in other CHI
        cache than data of targets. It's useful for l1_cache's caches of CHI
